--- a/index.html
+++ b/index.html
@@ -6715,42 +6715,72 @@ ${item.tamanhoSelecionado ? ` (${item.tamanhoSelecionado})` : ""}
 
 lista.innerHTML += `
   <div style="
-    margin-bottom:15px;
-    padding:14px;
+    margin-bottom:18px;
+    padding:18px;
     background:#ffffff;
-    border-radius:12px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.06);
+    border-radius:16px;
+    box-shadow:0 6px 18px rgba(0,0,0,0.08);
+    position:relative;
   ">
 
+    <!-- Botão excluir -->
+    <button onclick="excluirPedido('${doc.id}')"
+      style="
+        position:absolute;
+        top:10px;
+        right:10px;
+        background:#ff4d4d;
+        border:none;
+        color:white;
+        width:26px;
+        height:26px;
+        border-radius:50%;
+        cursor:pointer;
+        font-size:14px;
+      ">
+      ✕
+    </button>
+
     <div style="display:flex; justify-content:space-between; align-items:center;">
-      <strong style="font-size:15px;">Pedido ${p.numero}</strong>
-      <span style="font-size:13px; color:#666;">${p.cliente}</span>
+      <strong style="font-size:17px;">Pedido ${p.numero}</strong>
+      <span style="
+        font-size:12px;
+        padding:4px 8px;
+        border-radius:8px;
+        background:${p.status === "Novo" ? "#e6f3ff" : "#e8f5e9"};
+        color:${p.status === "Novo" ? "#007bff" : "#2e7d32"};
+        font-weight:600;
+      ">
+        ${p.status || "Novo"}
+      </span>
     </div>
 
-    <div style="margin-top:10px; border-top:1px solid #eee; padding-top:8px;">
+    <div style="margin-top:6px; font-size:13px; color:#666;">
+      ${p.cliente}
+    </div>
+
+    <div style="margin-top:12px; border-top:1px solid #eee; padding-top:10px;">
       ${p.itens.map(item => `
         <div style="
           display:flex;
           justify-content:space-between;
           align-items:center;
-          margin-bottom:6px;
-          font-size:13px;
+          margin-bottom:8px;
         ">
-          <div>
+          <div style="font-size:14px;">
             ${item.nome}
             ${item.tamanhoSelecionado ? ` (${item.tamanhoSelecionado})` : ""}
             <span style="
               background:#f0f0f0;
-              padding:2px 6px;
-              border-radius:6px;
-              font-size:11px;
+              padding:3px 7px;
+              border-radius:10px;
+              font-size:12px;
               margin-left:6px;
             ">
               x${item.qtd}
             </span>
           </div>
-
-          <div style="font-weight:500;">
+          <div style="font-weight:600;">
             R$ ${((item.preco || 0) * (item.qtd || 0)).toFixed(2)}
           </div>
         </div>
@@ -6758,13 +6788,13 @@ lista.innerHTML += `
     </div>
 
     <div style="
-      margin-top:10px;
-      padding-top:8px;
+      margin-top:14px;
+      padding-top:10px;
       border-top:1px solid #ddd;
       display:flex;
       justify-content:space-between;
       font-weight:bold;
-      font-size:15px;
+      font-size:16px;
     ">
       <span>Total</span>
       <span>R$ ${(p.total || 0).toFixed(2)}</span>
@@ -6772,13 +6802,25 @@ lista.innerHTML += `
 
   </div>
 `;
-
         });
 
       });
 
   }
 
+}
+
+  function excluirPedido(id) {
+  if (!confirm("Deseja realmente excluir este pedido?")) return;
+
+  db.collection("pedidos").doc(id).delete()
+    .then(() => {
+      alert("Pedido excluído com sucesso!");
+      abrirMiniAba("pedidos");
+    })
+    .catch(error => {
+      console.error("Erro ao excluir:", error);
+    });
 }
 
 function fecharMiniAdmin() {
