--- a/index.html
+++ b/index.html
@@ -1404,6 +1404,68 @@ input[type="search"]::-webkit-search-cancel-button {
   display: none;
 }
 
+  .toast-add {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background: #1e88e5;
+  color: white;
+  padding: 15px 20px;
+  border-radius: 12px;
+  font-weight: bold;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.3s ease;
+  z-index: 9999;
+}
+
+.toast-add.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+  .sobre-loja {
+  padding: 60px 20px;
+  background: #f5f9ff;
+  text-align: center;
+}
+
+.sobre-box {
+  max-width: 800px;
+  margin: auto;
+}
+
+.sobre-loja h2 {
+  margin-bottom: 20px;
+  color: #1e88e5;
+}
+
+.sobre-loja p {
+  margin-bottom: 15px;
+  font-size: 16px;
+  color: #555;
+}
+
+.sobre-destaque {
+  margin-top: 20px;
+  font-weight: bold;
+  color: #1e88e5;
+}
+
+  .btn-favorito {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: white;
+  border: none;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  font-size: 18px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+
 </style>
 </head>
 
@@ -1785,6 +1847,9 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
 
 <img src="img/desinfetante-dove.jpg" alt="Desinfetante Dove">
 <span class="icone-busca">🔍</span>
+<button class="btn-favorito" onclick="toggleFavorito(this, 'desinfetante-dove')">
+  🤍
+</button>
 
 <h3>Desinfetante Dove</h3>
 
@@ -3732,10 +3797,10 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
 <div class="produto kit kits"
      data-nomes="kit limpeza completo, limpeza casa, produtos limpeza, desconto">
 
-  <img src="img/kit-limpeza-completo.jpg" alt="Kit de Limpeza Completo">
+  <img src="img/kit-limpeza-completo.jpg" alt="Kit de Limpeza Completo 2L">
   <span class="icone-busca">🔍</span>
 
-  <h3>Kit de Limpeza Completo</h3>
+  <h3>Kit de Limpeza Completo 2L</h3>
   <p class="kit-desc">
     Sabão Líquido, Amaciante, Veja Multiuso, Desinfetante,
     Cândida (limpeza geral), Cândida Colorida (para roupas),
@@ -3749,7 +3814,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
         <del>R$ 150,50</del>
         <strong> R$ 130,00</strong>
       </span>
-<button onclick="addProduto('kit-de-limpeza-completo','Kit de Limpeza Completo',130)">Adicionar</button>
+<button onclick="addProduto('kit-de-limpeza-completo','Kit de Limpeza Completo 2L',130)">
         Adicionar
       </button>
     </div>
@@ -3759,10 +3824,10 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
 <div class="produto kit kits"
      data-nomes="kit limpeza simples, limpeza casa, produtos limpeza, desconto">
 
-  <img src="img/kit-limpeza-simples.jpg" alt="Kit de Limpeza Simples">
+  <img src="img/kit-limpeza-simples.jpg" alt="Kit de Limpeza Simples 2L">
   <span class="icone-busca">🔍</span>
 
-  <h3>Kit de Limpeza Simples</h3>
+  <h3>Kit de Limpeza Simples 2L</h3>
   <p class="kit-desc">
     Sabão Líquido, Amaciante, Detergente, Candida, 
     Candida Colorida, Veja Multiuso e Desinfetante 
@@ -3774,7 +3839,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
         <del>R$ 67,00</del>
         <strong> R$ 60,00</strong>
       </span>
-<button onclick="addProduto('kit-de-limpeza-simples','Kit de Limpeza Simples',60)">Adicionar</button>
+<button onclick="addProduto('kit-de-limpeza-simples','Kit de Limpeza Simples 2L',60)">
         Adicionar
       </button>
     </div>
@@ -5878,6 +5943,7 @@ function addProduto(id, nome, preco, imagem = "", tamanhos = [], tamanhoSelecion
   }
 
   atualizar();
+  mostrarToast();
 }
 
   
@@ -6143,23 +6209,23 @@ if (btnConfirmar) btnConfirmar.disabled = true;
   localStorage.setItem("pedidoAtual", numeroPedido);
 
 let msg = `
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 *FURACAO DA LIMPEZA*
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 
 *PEDIDO Nº ${numeroPedido}*
 
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 *DADOS DO CLIENTE*
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 *Cliente:* ${nome}
 *Telefone:* ${tel}
 *Endereço:* ${end}
 *Pagamento:* ${pag}
 
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 *ITENS DO PEDIDO*
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 `;
 
 carrinho.forEach(item => {
@@ -6168,9 +6234,9 @@ carrinho.forEach(item => {
 });
 
 msg += `
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 *TOTAL: R$ ${totalGeral.toFixed(2)}*
-━━━━━━━━━━━━━━━━━━━━━━━━
+━━━━━━━━━━━━━━━━━━━
 
 Pedido confirmado com sucesso.
 
@@ -6835,6 +6901,45 @@ function fecharMiniAdmin() {
   panel.innerHTML = "";
 }
 
+  function mostrarToast() {
+  const toast = document.getElementById("toastAdd");
+  if (!toast) return;
+
+  toast.classList.add("show");
+
+  setTimeout(() => {
+    toast.classList.remove("show");
+  }, 2000);
+}
+
+  function toggleFavorito(btn, id) {
+
+  let favoritos = JSON.parse(localStorage.getItem("favoritos")) || [];
+
+  if (favoritos.includes(id)) {
+    favoritos = favoritos.filter(f => f !== id);
+    btn.innerText = "🤍";
+  } else {
+    favoritos.push(id);
+    btn.innerText = "❤️";
+  }
+
+  localStorage.setItem("favoritos", JSON.stringify(favoritos));
+}
+
+function carregarFavoritos() {
+  const favoritos = JSON.parse(localStorage.getItem("favoritos")) || [];
+
+  favoritos.forEach(id => {
+    const btn = document.querySelector(
+      `[onclick*="${id}"]`
+    );
+    if (btn) btn.innerText = "❤️";
+  });
+}
+
+document.addEventListener("DOMContentLoaded", carregarFavoritos);
+
 </script>
  <!-- 🔐 BOTÃO ADMIN FLUTUANTE -->
 <button id="btnAdminFlutuante" onclick="toggleLoginAdmin()">
@@ -6879,6 +6984,32 @@ function fecharMiniAdmin() {
 
 <div id="listaAvaliacoes"></div>
 
+</section>
+
+  <section class="sobre-loja" id="sobre">
+  <div class="sobre-box">
+    <h2>🧼 Sobre a Furacão da Limpeza</h2>
+
+    <p>
+      A <strong>Furacão da Limpeza</strong> nasceu com o objetivo de levar
+      qualidade, economia e praticidade para sua casa.
+    </p>
+
+    <p>
+      Trabalhamos com produtos selecionados, kits promocionais e entregamos
+      com rapidez em todo Sorocaba. E estamos mais de 15 anos vendendo nossos produtos.
+    </p>
+
+    <p>
+      Nosso compromisso é oferecer preço justo, atendimento rápido e produtos
+      que realmente funcionam.
+    </p>
+
+    <div class="sobre-destaque">
+      🚚 Entrega rápida • 💙 Atendimento humanizado • 💰 Preço justo
+    </div>
+  </div>
+    
 </section>
 
   <footer class="rodape">
@@ -7022,6 +7153,11 @@ document.addEventListener("DOMContentLoaded", () => {
 </div>
 
   <div id="miniAdminPanel" class="mini-admin-panel"></div>
+
+  <!-- 🔔 NOTIFICAÇÃO AO ADICIONAR -->
+<div id="toastAdd" class="toast-add">
+  ✔️ Produto adicionado ao carrinho
+</div>
 
 </body>
 </html>
