--- a/index.html
+++ b/index.html
@@ -1466,12 +1466,12 @@ input[type="search"]::-webkit-search-cancel-button {
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
 
-  #btnFavoritos {
+ #btnFavoritos {
   position: fixed;
-  bottom: 90px;
-  right: 20px;
-  width: 55px;
-  height: 55px;
+  top: 20px;
+  left: 20px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   border: none;
   font-size: 22px;
@@ -1479,7 +1479,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: white;
   cursor: pointer;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  z-index: 999;
+  z-index: 3000;
 }
 
 .modal-favoritos {
