--- a/index.html
+++ b/index.html
@@ -8061,11 +8061,14 @@ function atualizarEstoqueTela() {
 // VOLTAR AO TOPO
 function voltarTopo() {
 
-  // 🔓 Garante que o scroll esteja liberado
-  document.body.style.overflow = "auto";
-  document.documentElement.style.overflow = "auto";
+  // 🔓 Libera qualquer travamento de scroll
+  document.body.style.overflow = "";
+  document.documentElement.style.overflow = "";
 
-  // 🔼 Força o scroll
+  // 🔼 Força o topo no body e no html
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+
   window.scrollTo({
     top: 0,
     behavior: "smooth"
