--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ header {
 /* BOTÃO CARRINHO */
 .carrinho-btn {
   position: fixed;
-  top: 20px;
+  bottom: 20px;
   right: 20px;
   background: #0a7cff;
   color: #fff;
@@ -1519,22 +1519,31 @@ input[type="search"]::-webkit-search-cancel-button {
   pointer-events: auto;
 }
 
-  #barraCarrinho {
+ #barraCarrinho {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+
+  bottom: 90px; /* fica abaixo do botão carrinho */
+  right: 20px;
+
+  width: 230px;
+  height: 55px;
+
   background: #1e88e5;
   color: white;
-  display: flex;
-  justify-content: space-between;
+
+  display: none;
   align-items: center;
-  padding: 14px 20px;
-  font-size: 18px;
+  justify-content: center;
+
+  border-radius: 30px;
+
+  font-size: 16px;
   font-weight: bold;
-  box-shadow: 0 -4px 15px rgba(0,0,0,0.2);
+
+  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+
   cursor: pointer;
-  z-index: 999;
+  z-index: 9999;
 }
 
 #barraCarrinho span {
@@ -1544,12 +1553,11 @@ input[type="search"]::-webkit-search-cancel-button {
 #barraCarrinho:hover {
   background: #1565c0;
 }
+  
 </style>
 </head>
 
 <body>
-
-<audio id="somAdd" src="https://assets.mixkit.co/sfx/preview/mixkit-select-click-1109.mp3"></audio>
 
 <header id="topo">
 
